k8s/overlays/local/eck/elastic-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eck-elastic
  namespace: nerceckdev1
spec:
  tls:
    termination: passthrough # Elasticsearch is the TLS endpoint
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: eck-elastic-es-http
