k8s/overlays/local/eck/elasticsearch-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elastic
  namespace: nerc-eck
spec:
  # host: elasticsearch.example.com # override if you don't want to use the host
  # that is automatically generated by OpenShift
  # (<route-name>[-<namespace>].<suffix>)
  tls:
    termination: passthrough  # Elasticsearch is the TLS endpoint
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: nerc-eck-es-http
