k8s/overlays/local/eck/fleet-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eck-fleet
  namespace: nerceckdev1
spec:
  tls:
    termination: passthrough # Kibana is the TLS endpoint
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: eck-fleet-agent-http
