k8s/overlays/local/eck/kibana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eck-kibana
  namespace: nerceckdev1
spec:
  tls:
    termination: passthrough # Kibana is the TLS endpoint
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: eck-kibana-kb-http
